--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -29,7 +29,7 @@ body {
     margin-left: 25px;
     margin-top: 10px;
     padding:10px; 
-    height: 100px;
+    height: 120px;
 }
 
 #randomNumber{
@@ -37,7 +37,7 @@ body {
     background-color: darksalmon;
     margin-top: 10px;
     padding:10px; 
-    height: 100px;
+    height: 120px;
 }
 
 .gameStatistics {
@@ -45,11 +45,12 @@ body {
     background-color: aqua;
     margin: 10px;
     padding-top: 5px;
-    height: 100px;
+    height: 120px;
 }
 
 .image {
     
+    margin-top: 10px;
     margin-left: 25px;
     width: 80px;
     height: 80px;
